# ChangeLog for x11-misc/shared-mime-info
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/shared-mime-info/ChangeLog,v 1.87 2007/06/06 17:05:05 drac Exp $

  06 Jun 2007; Samuli Suominen <drac@gentoo.org>
  shared-mime-info-0.20.ebuild:
  Stable on arm.

  27 May 2007; Joshua Kinard <kumba@gentoo.org>
  shared-mime-info-0.20.ebuild:
  Stable on mips.

  25 May 2007; Samuli Suominen <drac@gentoo.org>
  shared-mime-info-0.20.ebuild:
  Add missing gettext dep for bug 179675.

  21 May 2007; Joseph Jezak <josejx@gentoo.org>
  shared-mime-info-0.20.ebuild:
  Marked ppc stable for bug #178553.

  19 May 2007; Markus Rothe <corsair@gentoo.org>
  shared-mime-info-0.20.ebuild:
  Stable on ppc64; bug #178553

  16 May 2007; Steve Dibb <beandog@gentoo.org> shared-mime-info-0.20.ebuild:
  amd64 stable, bug 178553

  15 May 2007; Raúl Porcel <armin76@gentoo.org>
  shared-mime-info-0.20.ebuild:
  alpha/ia64/x86 stable wrt #178553

  15 May 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  shared-mime-info-0.20.ebuild:
  Stable on sparc wrt #178553

  15 May 2007; Jeroen Roovers <jer@gentoo.org> shared-mime-info-0.20.ebuild:
  Stable for HPPA (bug #178553).

*shared-mime-info-0.20 (04 Apr 2007)

  04 Apr 2007; Samuli Suominen <drac@gentoo.org>
  -files/shared-mime-info-0.18-m4a_offset.patch,
  -shared-mime-info-0.18-r1.ebuild, +shared-mime-info-0.20.ebuild:
  Version bump for bug 171570, thanks to Eike Hein <hein AT kde.org> for
  reporting.

  04 Feb 2007; Markus Rothe <corsair@gentoo.org>
  shared-mime-info-0.19.ebuild:
  Stable on ppc64; bug #164978

  03 Feb 2007; Andrej Kacian <ticho@gentoo.org>
  shared-mime-info-0.19.ebuild:
  Stable on x86, bug #164978.

  03 Feb 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  shared-mime-info-0.19.ebuild:
  Stable on ppc wrt bug #164978.

  03 Feb 2007; Olivier Crête <tester@gentoo.org>
  shared-mime-info-0.19.ebuild:
  Stable on amd64 per bug #164978
