@@ -3,14 +3,14 @@ EBUILD shared-mime-info-0.20.ebuild 923 RMD160 339c325527a33554e1ebe7025a2c7f9d4
 MD5 101284a35dc30ce231695df48aadc83b shared-mime-info-0.20.ebuild 923
 RMD160 339c325527a33554e1ebe7025a2c7f9d4adb5fd2 shared-mime-info-0.20.ebuild 923
 SHA256 9ea66419efb82db9a5a7bf2f32790071bf35b0d34040b7edd273bb08c4f97adf shared-mime-info-0.20.ebuild 923
-MISC ChangeLog 10799 RMD160 ff231ff51e99083fa943d958a19ccb5fcdffffe2 SHA1 d1ebe0b925a146a8f427351e3dfb23dfc2276e62 SHA256 c7a343b7aef10765085a0169fd68ce446fcdab316ec9b46c1f3c6ad96083c2e4
-MD5 208503bdbad41713060ad06631863474 ChangeLog 10799
-RMD160 ff231ff51e99083fa943d958a19ccb5fcdffffe2 ChangeLog 10799
-SHA256 c7a343b7aef10765085a0169fd68ce446fcdab316ec9b46c1f3c6ad96083c2e4 ChangeLog 10799
-MISC metadata.xml 341 RMD160 6ab4ff527218a2fd72f789ad7ace8f81cc9de159 SHA1 4f95cd3dada7055dc899f3c7f11f9116b48e6bd1 SHA256 ab944beddb00debc2762e9c23ac7f7d73e9150c6432f39ccb090c6338d09cf4d
-MD5 3d0ed6b5244bf88d38e38ee0e808c0f6 metadata.xml 341
-RMD160 6ab4ff527218a2fd72f789ad7ace8f81cc9de159 metadata.xml 341
-SHA256 ab944beddb00debc2762e9c23ac7f7d73e9150c6432f39ccb090c6338d09cf4d metadata.xml 341
+MISC ChangeLog 10910 RMD160 ee217278b0d513723f9358a1d8f3fb4e999562c9 SHA1 7dd5603352a8ea7275fe259daf648361473635a1 SHA256 c8e9ca79b8946a41dc11ed13e5d5c1ea6f073668e8651a9999522007544d5737
+MD5 70128075237837219ae5aefc2684d7d0 ChangeLog 10910
+RMD160 ee217278b0d513723f9358a1d8f3fb4e999562c9 ChangeLog 10910
+SHA256 c8e9ca79b8946a41dc11ed13e5d5c1ea6f073668e8651a9999522007544d5737 ChangeLog 10910
+MISC metadata.xml 234 RMD160 bd496dac30573bf707591b2b2ad497860e5aa029 SHA1 4641c1e70e35e944e7019aeae967deb1d2c28186 SHA256 3018e3b31ed690a57bfc14e35699dd20ea3b352fc28b918f699e6955b57a2d97
+MD5 8ea528c241b480ab53256eb332821871 metadata.xml 234
+RMD160 bd496dac30573bf707591b2b2ad497860e5aa029 metadata.xml 234
+SHA256 3018e3b31ed690a57bfc14e35699dd20ea3b352fc28b918f699e6955b57a2d97 metadata.xml 234
 MD5 9c9560a46b4254af1c3c076a13949e52 files/digest-shared-mime-info-0.20 268
 RMD160 a663a0215ec6fd37bc9b2a939dffcac4926313c8 files/digest-shared-mime-info-0.20 268
 SHA256 8d7a5bc9038240a85f52529757ba9c9c96414078c2eb59bc2775a0f9fca5023d files/digest-shared-mime-info-0.20 268
