@@ -1,13 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>gnome</herd>
+<herd>freedesktop</herd>
 <maintainer>
-  <email>foser@gentoo.org</email>
-  <name>Marinus Schraal</name>
-</maintainer>
-<maintainer>
-  <email>drac@gentoo.org</email>
-  <name>Samuli Suominen</name>
+<email>freedesktop-bugs@gentoo.org</email>
 </maintainer>
 </pkgmetadata>
