@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/shared-mime-info
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/shared-mime-info/ChangeLog,v 1.87 2007/06/06 17:05:05 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/shared-mime-info/ChangeLog,v 1.88 2007/07/09 20:15:36 drac Exp $
+
+  09 Jul 2007; Samuli Suominen <drac@gentoo.org> metadata.xml:
+  Add shared-mime-info under freedesktop herd.
 
   06 Jun 2007; Samuli Suominen <drac@gentoo.org>
   shared-mime-info-0.20.ebuild:
